--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
-
 {
-  "name": "ok11-game-app",
+  "name": "ok11",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,9 +12,5 @@
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18"
-  },
-  "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "14.0.0"
   }
 }
