--- a/package.json
+++ b/package.json
@@ -1,21 +1,8 @@
 {
-  "name": "ok11",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
-    "next": "14.0.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.1.0",  // ✅ Latest version
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sharp": "^0.33.2"
-  },
-  "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "14.0.0"
   }
 }
