--- a/package.json
+++ b/package.json
@@ -1,8 +1,19 @@
 {
+  "name": "ok11",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
-    "next": "^14.1.0",  
+    "next": "^14.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
     "sharp": "^0.33.2"
   }
 }
