--- a/package.json
+++ b/package.json
@@ -1,19 +1,8 @@
 {
-  "name": "ok11",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
-    "next": "^14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "sharp": "^0.33.2"
+    "next": "14.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "sharp": "0.33.2" // ✅ MUST HAVE for image resize
   }
 }
