--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sharp": "0.33.2" // ✅ MUST for image optimization
+    "sharp": "0.33.2" 
   },
   "devDependencies": {
     "eslint": "8.57.0",
